# fastapi_terraform_example

./: .gitignore  AGENTS.md  PLANS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml  test.db  todo.db
backend/alembic/: env.py
backend/alembic/versions/: 20240506_0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  health.py  todos.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  todo.py  user.py
backend/app/schemas/: __init__.py  auth.py  todo.py  user.py
backend/app/services/: __init__.py  security.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_todos.py
docs/: architecture.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.cjs  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: loader.tsx  theme-toggle.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  checkbox.tsx  form.tsx  (+4 more)
frontend/src/lib/: api.ts  env.ts  request-id.ts  storage.ts
frontend/src/pages/: auth-page.tsx  dashboard-page.tsx  settings-page.tsx
frontend/src/providers/: app-providers.tsx  auth-provider.tsx
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: bootstrap_tf_state.sh  build_and_push_backend.sh  deploy_frontend.sh  dev.sh
(+25 files in other folders)
